Phase Two_Parser/cool.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS error INHERITS TYPEID '{' feature_list '}' ';'
    7      | CLASS TYPEID INHERITS error '{' feature_list '}' ';'
    8      | CLASS error INHERITS error '{' feature_list '}' ';'
    9      | CLASS error '{' feature_list '}' ';'

   10 feature_list: feature_list feature
   11             | /* empty */

   12 feature: OBJECTID ':' TYPEID ';'
   13        | OBJECTID ':' TYPEID ASSIGN expression ';'
   14        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   15        | OBJECTID '(' formal_list ')' ':' error '{' expression '}' ';'
   16        | OBJECTID '(' error ')' ':' error '{' expression '}' ';'
   17        | error '(' error ')' ':' error '{' expression '}' ';'
   18        | OBJECTID ':' TYPEID ASSIGN error ';'
   19        | OBJECTID ':' error ASSIGN error ';'
   20        | error ':' error ASSIGN error ';'
   21        | OBJECTID ':' error ';'
   22        | error ':' error ';'

   23 formal_list: formal formal_helper
   24            | /* empty */

   25 formal_helper: formal_helper ',' formal
   26              | /* empty */

   27 formal: OBJECTID ':' TYPEID

   28 expression_list: expression ';'
   29                | expression_list expression ';'
   30                | error ';'

   31 expression: OBJECTID ASSIGN expression
   32           | expression '.' OBJECTID '(' arguments_list ')'
   33           | OBJECTID '(' arguments_list ')'
   34           | expression '@' TYPEID '.' OBJECTID '(' arguments_list ')'
   35           | IF expression THEN expression ELSE expression FI
   36           | WHILE expression LOOP expression POOL
   37           | '{' expression_list '}'
   38           | LET let_identifier
   39           | CASE expression OF branch_list ESAC
   40           | CASE error OF branch_list ESAC
   41           | NEW TYPEID
   42           | ISVOID expression
   43           | expression '+' expression
   44           | expression '-' expression
   45           | expression '*' expression
   46           | expression '/' expression
   47           | '~' expression
   48           | expression '<' expression
   49           | expression LE expression
   50           | expression '=' expression
   51           | NOT expression
   52           | '(' expression ')'
   53           | OBJECTID
   54           | INT_CONST
   55           | BOOL_CONST
   56           | STR_CONST

   57 let_identifier: OBJECTID ':' TYPEID ASSIGN expression IN expression
   58               | OBJECTID ':' TYPEID IN expression
   59               | OBJECTID ':' TYPEID ASSIGN expression ',' let_identifier
   60               | OBJECTID ':' TYPEID ',' let_identifier
   61               | OBJECTID ':' TYPEID ASSIGN error ',' let_identifier
   62               | OBJECTID ':' error ASSIGN error ',' let_identifier
   63               | error ':' error ASSIGN error ',' let_identifier
   64               | OBJECTID ':' error ',' let_identifier
   65               | error ':' error ',' let_identifier

   66 arguments_list: expression arguments
   67               | /* empty */

   68 arguments: arguments ',' expression
   69          | /* empty */

   70 branch_list: branch
   71            | branch_list branch

   72 branch: OBJECTID ':' TYPEID DARROW expression ';'
   73       | OBJECTID ':' TYPEID DARROW error ';'
   74       | OBJECTID ':' error DARROW expression ';'
   75       | OBJECTID ':' error DARROW error ';'
   76       | error ':' error DARROW error ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 14 15 16 17 32 33 34 52
')' (41) 14 15 16 17 32 33 34 52
'*' (42) 45
'+' (43) 43
',' (44) 25 59 60 61 62 63 64 65 68
'-' (45) 44
'.' (46) 32 34
'/' (47) 46
':' (58) 12 13 14 15 16 17 18 19 20 21 22 27 57 58 59 60 61 62 63 64
    65 72 73 74 75 76
';' (59) 4 5 6 7 8 9 12 13 14 15 16 17 18 19 20 21 22 28 29 30 72 73
    74 75 76
'<' (60) 48
'=' (61) 50
'@' (64) 34
'{' (123) 4 5 6 7 8 9 14 15 16 17 37
'}' (125) 4 5 6 7 8 9 14 15 16 17 37
'~' (126) 47
error (256) 6 7 8 9 15 16 17 18 19 20 21 22 30 40 61 62 63 64 65 73
    74 75 76
CLASS (258) 4 5 6 7 8 9
ELSE (259) 35
FI (260) 35
IF (261) 35
IN (262) 57 58
INHERITS (263) 5 6 7 8
LET (264) 38
LOOP (265) 36
POOL (266) 36
THEN (267) 35
WHILE (268) 36
CASE (269) 39 40
ESAC (270) 39 40
OF (271) 39 40
DARROW (272) 72 73 74 75 76
NEW (273) 41
ISVOID (274) 42
STR_CONST (275) 56
INT_CONST (276) 54
BOOL_CONST (277) 55
TYPEID (278) 4 5 6 7 12 13 14 18 27 34 41 57 58 59 60 61 72 73
OBJECTID (279) 12 13 14 15 16 18 19 21 27 31 32 33 34 53 57 58 59 60
    61 62 64 72 73 74 75
ASSIGN (280) 13 18 19 20 31 57 59 61 62 63
NOT (281) 51
LE (282) 49
ERROR (283)
LET_ (285)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
class_list (48)
    on left: 2 3, on right: 1 3
class (49)
    on left: 4 5 6 7 8 9, on right: 2 3
feature_list (50)
    on left: 10 11, on right: 4 5 6 7 8 9 10
feature (51)
    on left: 12 13 14 15 16 17 18 19 20 21 22, on right: 10
formal_list (52)
    on left: 23 24, on right: 14 15
formal_helper (53)
    on left: 25 26, on right: 23 25
formal (54)
    on left: 27, on right: 23 25
expression_list (55)
    on left: 28 29 30, on right: 29 37
expression (56)
    on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
    49 50 51 52 53 54 55 56, on right: 13 14 15 16 17 28 29 31 32 34
    35 36 39 42 43 44 45 46 47 48 49 50 51 52 57 58 59 66 68 72 74
let_identifier (57)
    on left: 57 58 59 60 61 62 63 64 65, on right: 38 59 60 61 62 63
    64 65
arguments_list (58)
    on left: 66 67, on right: 32 33 34
arguments (59)
    on left: 68 69, on right: 66 68
branch_list (60)
    on left: 70 71, on right: 39 40 71
branch (61)
    on left: 72 73 74 75 76, on right: 70 71


state 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


state 1

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS . error INHERITS TYPEID '{' feature_list '}' ';'
    7      | CLASS . TYPEID INHERITS error '{' feature_list '}' ';'
    8      | CLASS . error INHERITS error '{' feature_list '}' ';'
    9      | CLASS . error '{' feature_list '}' ';'

    error   shift, and go to state 5
    TYPEID  shift, and go to state 6


state 2

    0 $accept: program . $end

    $end  shift, and go to state 7


state 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 8


state 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 5

    6 class: CLASS error . INHERITS TYPEID '{' feature_list '}' ';'
    8      | CLASS error . INHERITS error '{' feature_list '}' ';'
    9      | CLASS error . '{' feature_list '}' ';'

    INHERITS  shift, and go to state 9
    '{'       shift, and go to state 10


state 6

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'
    7      | CLASS TYPEID . INHERITS error '{' feature_list '}' ';'

    INHERITS  shift, and go to state 11
    '{'       shift, and go to state 12


state 7

    0 $accept: program $end .

    $default  accept


state 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 9

    6 class: CLASS error INHERITS . TYPEID '{' feature_list '}' ';'
    8      | CLASS error INHERITS . error '{' feature_list '}' ';'

    error   shift, and go to state 13
    TYPEID  shift, and go to state 14


state 10

    9 class: CLASS error '{' . feature_list '}' ';'

    $default  reduce using rule 11 (feature_list)

    feature_list  go to state 15


state 11

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'
    7      | CLASS TYPEID INHERITS . error '{' feature_list '}' ';'

    error   shift, and go to state 16
    TYPEID  shift, and go to state 17


state 12

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 11 (feature_list)

    feature_list  go to state 18


state 13

    8 class: CLASS error INHERITS error . '{' feature_list '}' ';'

    '{'  shift, and go to state 19


state 14

    6 class: CLASS error INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 20


state 15

    9 class: CLASS error '{' feature_list . '}' ';'
   10 feature_list: feature_list . feature

    error     shift, and go to state 21
    OBJECTID  shift, and go to state 22
    '}'       shift, and go to state 23

    feature  go to state 24


state 16

    7 class: CLASS TYPEID INHERITS error . '{' feature_list '}' ';'

    '{'  shift, and go to state 25


state 17

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 26


state 18

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
   10 feature_list: feature_list . feature

    error     shift, and go to state 21
    OBJECTID  shift, and go to state 22
    '}'       shift, and go to state 27

    feature  go to state 24


state 19

    8 class: CLASS error INHERITS error '{' . feature_list '}' ';'

    $default  reduce using rule 11 (feature_list)

    feature_list  go to state 28


state 20

    6 class: CLASS error INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 11 (feature_list)

    feature_list  go to state 29


state 21

   17 feature: error . '(' error ')' ':' error '{' expression '}' ';'
   20        | error . ':' error ASSIGN error ';'
   22        | error . ':' error ';'

    ':'  shift, and go to state 30
    '('  shift, and go to state 31


state 22

   12 feature: OBJECTID . ':' TYPEID ';'
   13        | OBJECTID . ':' TYPEID ASSIGN expression ';'
   14        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   15        | OBJECTID . '(' formal_list ')' ':' error '{' expression '}' ';'
   16        | OBJECTID . '(' error ')' ':' error '{' expression '}' ';'
   18        | OBJECTID . ':' TYPEID ASSIGN error ';'
   19        | OBJECTID . ':' error ASSIGN error ';'
   21        | OBJECTID . ':' error ';'

    ':'  shift, and go to state 32
    '('  shift, and go to state 33


state 23

    9 class: CLASS error '{' feature_list '}' . ';'

    ';'  shift, and go to state 34


state 24

   10 feature_list: feature_list feature .

    $default  reduce using rule 10 (feature_list)


state 25

    7 class: CLASS TYPEID INHERITS error '{' . feature_list '}' ';'

    $default  reduce using rule 11 (feature_list)

    feature_list  go to state 35


state 26

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 11 (feature_list)

    feature_list  go to state 36


state 27

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 37


state 28

    8 class: CLASS error INHERITS error '{' feature_list . '}' ';'
   10 feature_list: feature_list . feature

    error     shift, and go to state 21
    OBJECTID  shift, and go to state 22
    '}'       shift, and go to state 38

    feature  go to state 24


state 29

    6 class: CLASS error INHERITS TYPEID '{' feature_list . '}' ';'
   10 feature_list: feature_list . feature

    error     shift, and go to state 21
    OBJECTID  shift, and go to state 22
    '}'       shift, and go to state 39

    feature  go to state 24


state 30

   20 feature: error ':' . error ASSIGN error ';'
   22        | error ':' . error ';'

    error  shift, and go to state 40


state 31

   17 feature: error '(' . error ')' ':' error '{' expression '}' ';'

    error  shift, and go to state 41


state 32

   12 feature: OBJECTID ':' . TYPEID ';'
   13        | OBJECTID ':' . TYPEID ASSIGN expression ';'
   18        | OBJECTID ':' . TYPEID ASSIGN error ';'
   19        | OBJECTID ':' . error ASSIGN error ';'
   21        | OBJECTID ':' . error ';'

    error   shift, and go to state 42
    TYPEID  shift, and go to state 43


state 33

   14 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}' ';'
   15        | OBJECTID '(' . formal_list ')' ':' error '{' expression '}' ';'
   16        | OBJECTID '(' . error ')' ':' error '{' expression '}' ';'

    error     shift, and go to state 44
    OBJECTID  shift, and go to state 45

    ')'  reduce using rule 24 (formal_list)

    formal_list  go to state 46
    formal       go to state 47


state 34

    9 class: CLASS error '{' feature_list '}' ';' .

    $default  reduce using rule 9 (class)


state 35

    7 class: CLASS TYPEID INHERITS error '{' feature_list . '}' ';'
   10 feature_list: feature_list . feature

    error     shift, and go to state 21
    OBJECTID  shift, and go to state 22
    '}'       shift, and go to state 48

    feature  go to state 24


state 36

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
   10 feature_list: feature_list . feature

    error     shift, and go to state 21
    OBJECTID  shift, and go to state 22
    '}'       shift, and go to state 49

    feature  go to state 24


state 37

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


state 38

    8 class: CLASS error INHERITS error '{' feature_list '}' . ';'

    ';'  shift, and go to state 50


state 39

    6 class: CLASS error INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 51


state 40

   20 feature: error ':' error . ASSIGN error ';'
   22        | error ':' error . ';'

    ASSIGN  shift, and go to state 52
    ';'     shift, and go to state 53


state 41

   17 feature: error '(' error . ')' ':' error '{' expression '}' ';'

    ')'  shift, and go to state 54


state 42

   19 feature: OBJECTID ':' error . ASSIGN error ';'
   21        | OBJECTID ':' error . ';'

    ASSIGN  shift, and go to state 55
    ';'     shift, and go to state 56


state 43

   12 feature: OBJECTID ':' TYPEID . ';'
   13        | OBJECTID ':' TYPEID . ASSIGN expression ';'
   18        | OBJECTID ':' TYPEID . ASSIGN error ';'

    ASSIGN  shift, and go to state 57
    ';'     shift, and go to state 58


state 44

   16 feature: OBJECTID '(' error . ')' ':' error '{' expression '}' ';'

    ')'  shift, and go to state 59


state 45

   27 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 60


state 46

   14 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}' ';'
   15        | OBJECTID '(' formal_list . ')' ':' error '{' expression '}' ';'

    ')'  shift, and go to state 61


state 47

   23 formal_list: formal . formal_helper

    $default  reduce using rule 26 (formal_helper)

    formal_helper  go to state 62


state 48

    7 class: CLASS TYPEID INHERITS error '{' feature_list '}' . ';'

    ';'  shift, and go to state 63


state 49

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 64


state 50

    8 class: CLASS error INHERITS error '{' feature_list '}' ';' .

    $default  reduce using rule 8 (class)


state 51

    6 class: CLASS error INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 6 (class)


state 52

   20 feature: error ':' error ASSIGN . error ';'

    error  shift, and go to state 65


state 53

   22 feature: error ':' error ';' .

    $default  reduce using rule 22 (feature)


state 54

   17 feature: error '(' error ')' . ':' error '{' expression '}' ';'

    ':'  shift, and go to state 66


state 55

   19 feature: OBJECTID ':' error ASSIGN . error ';'

    error  shift, and go to state 67


state 56

   21 feature: OBJECTID ':' error ';' .

    $default  reduce using rule 21 (feature)


state 57

   13 feature: OBJECTID ':' TYPEID ASSIGN . expression ';'
   18        | OBJECTID ':' TYPEID ASSIGN . error ';'

    error       shift, and go to state 68
    IF          shift, and go to state 69
    LET         shift, and go to state 70
    WHILE       shift, and go to state 71
    CASE        shift, and go to state 72
    NEW         shift, and go to state 73
    ISVOID      shift, and go to state 74
    STR_CONST   shift, and go to state 75
    INT_CONST   shift, and go to state 76
    BOOL_CONST  shift, and go to state 77
    OBJECTID    shift, and go to state 78
    NOT         shift, and go to state 79
    '~'         shift, and go to state 80
    '{'         shift, and go to state 81
    '('         shift, and go to state 82

    expression  go to state 83


state 58

   12 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 12 (feature)


state 59

   16 feature: OBJECTID '(' error ')' . ':' error '{' expression '}' ';'

    ':'  shift, and go to state 84


state 60

   27 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 85


state 61

   14 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}' ';'
   15        | OBJECTID '(' formal_list ')' . ':' error '{' expression '}' ';'

    ':'  shift, and go to state 86


state 62

   23 formal_list: formal formal_helper .
   25 formal_helper: formal_helper . ',' formal

    ','  shift, and go to state 87

    $default  reduce using rule 23 (formal_list)


state 63

    7 class: CLASS TYPEID INHERITS error '{' feature_list '}' ';' .

    $default  reduce using rule 7 (class)


state 64

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 65

   20 feature: error ':' error ASSIGN error . ';'

    ';'  shift, and go to state 88


state 66

   17 feature: error '(' error ')' ':' . error '{' expression '}' ';'

    error  shift, and go to state 89


state 67

   19 feature: OBJECTID ':' error ASSIGN error . ';'

    ';'  shift, and go to state 90


state 68

   18 feature: OBJECTID ':' TYPEID ASSIGN error . ';'

    ';'  shift, and go to state 91


state 69

   35 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 69
    LET         shift, and go to state 70
    WHILE       shift, and go to state 71
    CASE        shift, and go to state 72
    NEW         shift, and go to state 73
    ISVOID      shift, and go to state 74
    STR_CONST   shift, and go to state 75
    INT_CONST   shift, and go to state 76
    BOOL_CONST  shift, and go to state 77
    OBJECTID    shift, and go to state 78
    NOT         shift, and go to state 79
    '~'         shift, and go to state 80
    '{'         shift, and go to state 81
    '('         shift, and go to state 82

    expression  go to state 92


state 70

   38 expression: LET . let_identifier

    error     shift, and go to state 93
    OBJECTID  shift, and go to state 94

    let_identifier  go to state 95


state 71

   36 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 69
    LET         shift, and go to state 70
    WHILE       shift, and go to state 71
    CASE        shift, and go to state 72
    NEW         shift, and go to state 73
    ISVOID      shift, and go to state 74
    STR_CONST   shift, and go to state 75
    INT_CONST   shift, and go to state 76
    BOOL_CONST  shift, and go to state 77
    OBJECTID    shift, and go to state 78
    NOT         shift, and go to state 79
    '~'         shift, and go to state 80
    '{'         shift, and go to state 81
    '('         shift, and go to state 82

    expression  go to state 96


state 72

   39 expression: CASE . expression OF branch_list ESAC
   40           | CASE . error OF branch_list ESAC

    error       shift, and go to state 97
    IF          shift, and go to state 69
    LET         shift, and go to state 70
    WHILE       shift, and go to state 71
    CASE        shift, and go to state 72
    NEW         shift, and go to state 73
    ISVOID      shift, and go to state 74
    STR_CONST   shift, and go to state 75
    INT_CONST   shift, and go to state 76
    BOOL_CONST  shift, and go to state 77
    OBJECTID    shift, and go to state 78
    NOT         shift, and go to state 79
    '~'         shift, and go to state 80
    '{'         shift, and go to state 81
    '('         shift, and go to state 82

    expression  go to state 98


state 73

   41 expression: NEW . TYPEID

    TYPEID  shift, and go to state 99


state 74

   42 expression: ISVOID . expression

    IF          shift, and go to state 69
    LET         shift, and go to state 70
    WHILE       shift, and go to state 71
    CASE        shift, and go to state 72
    NEW         shift, and go to state 73
    ISVOID      shift, and go to state 74
    STR_CONST   shift, and go to state 75
    INT_CONST   shift, and go to state 76
    BOOL_CONST  shift, and go to state 77
    OBJECTID    shift, and go to state 78
    NOT         shift, and go to state 79
    '~'         shift, and go to state 80
    '{'         shift, and go to state 81
    '('         shift, and go to state 82

    expression  go to state 100


state 75

   56 expression: STR_CONST .

    $default  reduce using rule 56 (expression)


state 76

   54 expression: INT_CONST .

    $default  reduce using rule 54 (expression)


state 77

   55 expression: BOOL_CONST .

    $default  reduce using rule 55 (expression)


state 78

   31 expression: OBJECTID . ASSIGN expression
   33           | OBJECTID . '(' arguments_list ')'
   53           | OBJECTID .

    ASSIGN  shift, and go to state 101
    '('     shift, and go to state 102

    $default  reduce using rule 53 (expression)


state 79

   51 expression: NOT . expression

    IF          shift, and go to state 69
    LET         shift, and go to state 70
    WHILE       shift, and go to state 71
    CASE        shift, and go to state 72
    NEW         shift, and go to state 73
    ISVOID      shift, and go to state 74
    STR_CONST   shift, and go to state 75
    INT_CONST   shift, and go to state 76
    BOOL_CONST  shift, and go to state 77
    OBJECTID    shift, and go to state 78
    NOT         shift, and go to state 79
    '~'         shift, and go to state 80
    '{'         shift, and go to state 81
    '('         shift, and go to state 82

    expression  go to state 103


state 80

   47 expression: '~' . expression

    IF          shift, and go to state 69
    LET         shift, and go to state 70
    WHILE       shift, and go to state 71
    CASE        shift, and go to state 72
    NEW         shift, and go to state 73
    ISVOID      shift, and go to state 74
    STR_CONST   shift, and go to state 75
    INT_CONST   shift, and go to state 76
    BOOL_CONST  shift, and go to state 77
    OBJECTID    shift, and go to state 78
    NOT         shift, and go to state 79
    '~'         shift, and go to state 80
    '{'         shift, and go to state 81
    '('         shift, and go to state 82

    expression  go to state 104


state 81

   37 expression: '{' . expression_list '}'

    error       shift, and go to state 105
    IF          shift, and go to state 69
    LET         shift, and go to state 70
    WHILE       shift, and go to state 71
    CASE        shift, and go to state 72
    NEW         shift, and go to state 73
    ISVOID      shift, and go to state 74
    STR_CONST   shift, and go to state 75
    INT_CONST   shift, and go to state 76
    BOOL_CONST  shift, and go to state 77
    OBJECTID    shift, and go to state 78
    NOT         shift, and go to state 79
    '~'         shift, and go to state 80
    '{'         shift, and go to state 81
    '('         shift, and go to state 82

    expression_list  go to state 106
    expression       go to state 107


state 82

   52 expression: '(' . expression ')'

    IF          shift, and go to state 69
    LET         shift, and go to state 70
    WHILE       shift, and go to state 71
    CASE        shift, and go to state 72
    NEW         shift, and go to state 73
    ISVOID      shift, and go to state 74
    STR_CONST   shift, and go to state 75
    INT_CONST   shift, and go to state 76
    BOOL_CONST  shift, and go to state 77
    OBJECTID    shift, and go to state 78
    NOT         shift, and go to state 79
    '~'         shift, and go to state 80
    '{'         shift, and go to state 81
    '('         shift, and go to state 82

    expression  go to state 108


state 83

   13 feature: OBJECTID ':' TYPEID ASSIGN expression . ';'
   32 expression: expression . '.' OBJECTID '(' arguments_list ')'
   34           | expression . '@' TYPEID '.' OBJECTID '(' arguments_list ')'
   43           | expression . '+' expression
   44           | expression . '-' expression
   45           | expression . '*' expression
   46           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . LE expression
   50           | expression . '=' expression

    LE   shift, and go to state 109
    '<'  shift, and go to state 110
    '='  shift, and go to state 111
    '*'  shift, and go to state 112
    '/'  shift, and go to state 113
    '+'  shift, and go to state 114
    '-'  shift, and go to state 115
    '@'  shift, and go to state 116
    '.'  shift, and go to state 117
    ';'  shift, and go to state 118


state 84

   16 feature: OBJECTID '(' error ')' ':' . error '{' expression '}' ';'

    error  shift, and go to state 119


state 85

   27 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 27 (formal)


state 86

   14 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}' ';'
   15        | OBJECTID '(' formal_list ')' ':' . error '{' expression '}' ';'

    error   shift, and go to state 120
    TYPEID  shift, and go to state 121


state 87

   25 formal_helper: formal_helper ',' . formal

    OBJECTID  shift, and go to state 45

    formal  go to state 122


state 88

   20 feature: error ':' error ASSIGN error ';' .

    $default  reduce using rule 20 (feature)


state 89

   17 feature: error '(' error ')' ':' error . '{' expression '}' ';'

    '{'  shift, and go to state 123


state 90

   19 feature: OBJECTID ':' error ASSIGN error ';' .

    $default  reduce using rule 19 (feature)


state 91

   18 feature: OBJECTID ':' TYPEID ASSIGN error ';' .

    $default  reduce using rule 18 (feature)


state 92

   32 expression: expression . '.' OBJECTID '(' arguments_list ')'
   34           | expression . '@' TYPEID '.' OBJECTID '(' arguments_list ')'
   35           | IF expression . THEN expression ELSE expression FI
   43           | expression . '+' expression
   44           | expression . '-' expression
   45           | expression . '*' expression
   46           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . LE expression
   50           | expression . '=' expression

    THEN  shift, and go to state 124
    LE    shift, and go to state 109
    '<'   shift, and go to state 110
    '='   shift, and go to state 111
    '*'   shift, and go to state 112
    '/'   shift, and go to state 113
    '+'   shift, and go to state 114
    '-'   shift, and go to state 115
    '@'   shift, and go to state 116
    '.'   shift, and go to state 117


state 93

   63 let_identifier: error . ':' error ASSIGN error ',' let_identifier
   65               | error . ':' error ',' let_identifier

    ':'  shift, and go to state 125


state 94

   57 let_identifier: OBJECTID . ':' TYPEID ASSIGN expression IN expression
   58               | OBJECTID . ':' TYPEID IN expression
   59               | OBJECTID . ':' TYPEID ASSIGN expression ',' let_identifier
   60               | OBJECTID . ':' TYPEID ',' let_identifier
   61               | OBJECTID . ':' TYPEID ASSIGN error ',' let_identifier
   62               | OBJECTID . ':' error ASSIGN error ',' let_identifier
   64               | OBJECTID . ':' error ',' let_identifier

    ':'  shift, and go to state 126


state 95

   38 expression: LET let_identifier .

    $default  reduce using rule 38 (expression)


state 96

   32 expression: expression . '.' OBJECTID '(' arguments_list ')'
   34           | expression . '@' TYPEID '.' OBJECTID '(' arguments_list ')'
   36           | WHILE expression . LOOP expression POOL
   43           | expression . '+' expression
   44           | expression . '-' expression
   45           | expression . '*' expression
   46           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . LE expression
   50           | expression . '=' expression

    LOOP  shift, and go to state 127
    LE    shift, and go to state 109
    '<'   shift, and go to state 110
    '='   shift, and go to state 111
    '*'   shift, and go to state 112
    '/'   shift, and go to state 113
    '+'   shift, and go to state 114
    '-'   shift, and go to state 115
    '@'   shift, and go to state 116
    '.'   shift, and go to state 117


state 97

   40 expression: CASE error . OF branch_list ESAC

    OF  shift, and go to state 128


state 98

   32 expression: expression . '.' OBJECTID '(' arguments_list ')'
   34           | expression . '@' TYPEID '.' OBJECTID '(' arguments_list ')'
   39           | CASE expression . OF branch_list ESAC
   43           | expression . '+' expression
   44           | expression . '-' expression
   45           | expression . '*' expression
   46           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . LE expression
   50           | expression . '=' expression

    OF   shift, and go to state 129
    LE   shift, and go to state 109
    '<'  shift, and go to state 110
    '='  shift, and go to state 111
    '*'  shift, and go to state 112
    '/'  shift, and go to state 113
    '+'  shift, and go to state 114
    '-'  shift, and go to state 115
    '@'  shift, and go to state 116
    '.'  shift, and go to state 117


state 99

   41 expression: NEW TYPEID .

    $default  reduce using rule 41 (expression)


state 100

   32 expression: expression . '.' OBJECTID '(' arguments_list ')'
   34           | expression . '@' TYPEID '.' OBJECTID '(' arguments_list ')'
   42           | ISVOID expression .
   43           | expression . '+' expression
   44           | expression . '-' expression
   45           | expression . '*' expression
   46           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . LE expression
   50           | expression . '=' expression

    '@'  shift, and go to state 116
    '.'  shift, and go to state 117

    $default  reduce using rule 42 (expression)


state 101

   31 expression: OBJECTID ASSIGN . expression

    IF          shift, and go to state 69
    LET         shift, and go to state 70
    WHILE       shift, and go to state 71
    CASE        shift, and go to state 72
    NEW         shift, and go to state 73
    ISVOID      shift, and go to state 74
    STR_CONST   shift, and go to state 75
    INT_CONST   shift, and go to state 76
    BOOL_CONST  shift, and go to state 77
    OBJECTID    shift, and go to state 78
    NOT         shift, and go to state 79
    '~'         shift, and go to state 80
    '{'         shift, and go to state 81
    '('         shift, and go to state 82

    expression  go to state 130


state 102

   33 expression: OBJECTID '(' . arguments_list ')'

    IF          shift, and go to state 69
    LET         shift, and go to state 70
    WHILE       shift, and go to state 71
    CASE        shift, and go to state 72
    NEW         shift, and go to state 73
    ISVOID      shift, and go to state 74
    STR_CONST   shift, and go to state 75
    INT_CONST   shift, and go to state 76
    BOOL_CONST  shift, and go to state 77
    OBJECTID    shift, and go to state 78
    NOT         shift, and go to state 79
    '~'         shift, and go to state 80
    '{'         shift, and go to state 81
    '('         shift, and go to state 82

    $default  reduce using rule 67 (arguments_list)

    expression      go to state 131
    arguments_list  go to state 132


state 103

   32 expression: expression . '.' OBJECTID '(' arguments_list ')'
   34           | expression . '@' TYPEID '.' OBJECTID '(' arguments_list ')'
   43           | expression . '+' expression
   44           | expression . '-' expression
   45           | expression . '*' expression
   46           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . LE expression
   50           | expression . '=' expression
   51           | NOT expression .

    LE   shift, and go to state 109
    '<'  shift, and go to state 110
    '='  shift, and go to state 111
    '*'  shift, and go to state 112
    '/'  shift, and go to state 113
    '+'  shift, and go to state 114
    '-'  shift, and go to state 115
    '@'  shift, and go to state 116
    '.'  shift, and go to state 117

    $default  reduce using rule 51 (expression)


state 104

   32 expression: expression . '.' OBJECTID '(' arguments_list ')'
   34           | expression . '@' TYPEID '.' OBJECTID '(' arguments_list ')'
   43           | expression . '+' expression
   44           | expression . '-' expression
   45           | expression . '*' expression
   46           | expression . '/' expression
   47           | '~' expression .
   48           | expression . '<' expression
   49           | expression . LE expression
   50           | expression . '=' expression

    '@'  shift, and go to state 116
    '.'  shift, and go to state 117

    $default  reduce using rule 47 (expression)


state 105

   30 expression_list: error . ';'

    ';'  shift, and go to state 133


state 106

   29 expression_list: expression_list . expression ';'
   37 expression: '{' expression_list . '}'

    IF          shift, and go to state 69
    LET         shift, and go to state 70
    WHILE       shift, and go to state 71
    CASE        shift, and go to state 72
    NEW         shift, and go to state 73
    ISVOID      shift, and go to state 74
    STR_CONST   shift, and go to state 75
    INT_CONST   shift, and go to state 76
    BOOL_CONST  shift, and go to state 77
    OBJECTID    shift, and go to state 78
    NOT         shift, and go to state 79
    '~'         shift, and go to state 80
    '{'         shift, and go to state 81
    '}'         shift, and go to state 134
    '('         shift, and go to state 82

    expression  go to state 135


state 107

   28 expression_list: expression . ';'
   32 expression: expression . '.' OBJECTID '(' arguments_list ')'
   34           | expression . '@' TYPEID '.' OBJECTID '(' arguments_list ')'
   43           | expression . '+' expression
   44           | expression . '-' expression
   45           | expression . '*' expression
   46           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . LE expression
   50           | expression . '=' expression

    LE   shift, and go to state 109
    '<'  shift, and go to state 110
    '='  shift, and go to state 111
    '*'  shift, and go to state 112
    '/'  shift, and go to state 113
    '+'  shift, and go to state 114
    '-'  shift, and go to state 115
    '@'  shift, and go to state 116
    '.'  shift, and go to state 117
    ';'  shift, and go to state 136


state 108
